--- a/.gitignore
+++ b/.gitignore
@@ -144,7 +144,8 @@ cython_debug/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -164,3 +165,5 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+secrets.py
