--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,7 @@
     "/Users/sascha/.vscode/extensions/joedevivo.vscode-circuitpython-0.1.0/stubs",
     "/Users/sascha/Library/Application Support/Code/User/globalStorage/joedevivo.vscode-circuitpython/bundle/20200407/adafruit-circuitpython-bundle-py-20200411/lib"
   ],
-  "python.pythonPath": "/Users/sascha/.local/share/virtualenvs/PyPortal-x-DzJ9OM/bin/python",
+  "python.pythonPath": "/usr/local/opt/python@3.8/bin/python3",
   "circuitpython.board.vid": "0x239A",
   "circuitpython.board.pid": "0x8054"
 }
